# memecraft

./: CMakeLists.txt  LICENSE  main.cpp
engine/core/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  GameLoop.cpp  GameLoop.hpp  Logger.cpp  Logger.hpp  Time.cpp  Time.hpp
engine/platform/: Window.cpp  Window.hpp
engine/rendering/: Camera.cpp  Camera.hpp  GLMesh.cpp  GLMesh.hpp  Mesh.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderUtils.cpp  ShaderUtils.hpp  Vertex.hpp
engine/rendering/shaders/: voxel.frag  voxel.vert
engine/threading/: JobSystem.cpp  JobSystem.hpp
engine/world/: WorldSystem.cpp  WorldSystem.hpp
game/player/: Player.cpp  Player.hpp
game/world/: Biome.cpp  Biome.hpp  Block.hpp  BlockRegistry.cpp  BlockRegistry.hpp  Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  Collision.cpp  Collision.hpp  Mesher.cpp  Mesher.hpp  RayCast.cpp  Raycast.hpp  TreeGenerator.cpp  TreeGenerator.hpp  WorldGenerator.cpp  WorldGenerator.hpp
